<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/start_btn_padding">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="@dimen/button_alpha_zero"
        android:background="@drawable/btn_back"
        android:scaleType="fitXY"
        android:src="@drawable/ic_earth"
        android:tint="?colorPrimary"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHeight_percent="@dimen/percent_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="@dimen/percent_width" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top"
        android:text="@string/main_screen_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintBottom_toTopOf="@+id/btn_main"
        app:layout_constraintEnd_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_nasa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="@dimen/button_alpha_zero"
        android:background="@drawable/btn_back"
        android:scaleType="fitXY"
        android:src="@drawable/ic_mars"
        android:tint="?colorPrimary"
        app:layout_constraintHeight_percent="@dimen/percent_height"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="@dimen/percent_width" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nasa_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top"
        android:text="@string/nasa_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintBottom_toTopOf="@+id/btn_nasa"
        app:layout_constraintStart_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="@dimen/button_alpha_zero"
        android:background="@drawable/btn_back"
        android:scaleType="fitXY"
        android:src="@drawable/ic_settings_menu"
        android:tint="?colorPrimary"
        app:layout_constraintHeight_percent="@dimen/percent_height"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_nasa"
        app:layout_constraintWidth_percent="@dimen/percent_width" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_top"
        android:text="@string/settings_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_settings" />

</androidx.constraintlayout.widget.ConstraintLayout>